kubernetes/infrastructure/controllers/horizon/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: horizon
  namespace: horizon-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: horizon
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: kubernetes.png
    gethomepage.dev/href: https://horizon.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/component=interface
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`horizon.syslabs.dev`)
      kind: Rule
      services:
        - name: horizon-oauth2-proxy
          port: 4180
  tls: {}
